--- a/app/src/main/res/layout/row_transaksi.xml
+++ b/app/src/main/res/layout/row_transaksi.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <View
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/color_status_transaksi"
                 android:layout_width="match_parent"
                 android:layout_height="8dp"
