more last breath!!

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -28,6 +28,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/profile_name"
                 style="@style/ProfileTextDark"
                 android:layout_width="225dp"
                 android:layout_height="wrap_content"
