--- a/app/src/main/res/layout/fragment_penumpang.xml
+++ b/app/src/main/res/layout/fragment_penumpang.xml
@@ -29,6 +29,7 @@
             android:background="@drawable/custom_input"
             android:drawableStart="@drawable/custom_passenger_input"
             android:drawablePadding="10dp"
+            android:maxLines="1"
             android:paddingStart="10dp"
             android:hint="@string/nama_penumpang"
             android:textSize="11sp"
@@ -43,6 +44,7 @@
             android:background="@drawable/custom_input"
             android:drawableStart="@drawable/custom_plate_number_input"
             android:drawablePadding="10dp"
+            android:maxLines="1"
             android:paddingStart="10dp"
             android:hint="@string/nomor_telepon_placeholder"
             android:textSize="11sp"
