--- a/app/src/main/res/layout/fragment_ticket.xml
+++ b/app/src/main/res/layout/fragment_ticket.xml
@@ -17,7 +17,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
 
                 <com.google.android.material.tabs.TabLayout
                     android:id="@+id/tab_ticket"
@@ -40,14 +40,13 @@
                 <androidx.viewpager.widget.ViewPager
                     android:id="@+id/view_pager_id"
                     android:layout_width="match_parent"
-                    android:layout_height="750dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tab_ticket">
+                    android:layout_height="670dp"
+                    app:layout_constraintTop_toBottomOf="@id/tab_ticket"
+                    app:layout_constraintBottom_toBottomOf="parent">
 
                 </androidx.viewpager.widget.ViewPager>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </ScrollView>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
