--- a/app/src/main/res/layout/fragment_ticket_kapal.xml
+++ b/app/src/main/res/layout/fragment_ticket_kapal.xml
@@ -7,52 +7,84 @@
     android:background="@color/light_blue"
     tools:context=".ticket_kapal">
 
-    <EditText
-        android:id="@+id/pelabuhan_asal"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="20dp"
-        android:background="@drawable/custom_input"
-        android:drawableStart="@drawable/custom_pelabuhan_input"
-        android:drawablePadding="10dp"
-        android:ems="10"
-        android:hint="@string/pelabuhan_asal"
-        android:inputType="textNoSuggestions"
-        android:paddingStart="10dp"
-        android:textSize="14sp"
+    <ImageView
+        android:id="@+id/image_pelabuhan_1"
+        android:layout_width="100px"
+        android:layout_height="100px"
+        android:layout_margin="25dp"
+        android:src="@drawable/color_boat"
+        app:layout_constraintEnd_toStartOf="@id/pelabuhan_asal"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/pelabuhan_tujuan"
-        android:layout_width="match_parent"
+        android:id="@+id/pelabuhan_asal"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="20dp"
         android:background="@drawable/custom_input"
-        android:drawableStart="@drawable/custom_pelabuhan_input"
-        android:drawablePadding="10dp"
+        android:ems="10"
+        android:hint="@string/pelabuhan_asal"
+        android:inputType="textNoSuggestions"
+        android:paddingStart="20dp"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/image_pelabuhan_1"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/image_pelabuhan_2"
+        android:layout_width="100px"
+        android:layout_height="100px"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginVertical="33dp"
+        android:src="@drawable/color_boat"
+        app:layout_constraintEnd_toStartOf="@id/pelabuhan_tujuan"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/image_pelabuhan_1" />
+
+    <EditText
+        android:id="@+id/pelabuhan_tujuan"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="20dp"
+        android:background="@drawable/custom_input"
         android:ems="10"
         android:hint="@string/pelabuhan_tujuan"
         android:inputType="textNoSuggestions"
-        android:paddingStart="10dp"
+        android:paddingStart="20dp"
         android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/image_pelabuhan_2"
         app:layout_constraintTop_toBottomOf="@id/pelabuhan_asal" />
+
+    <ImageView
+        android:id="@+id/image_tanggal_keberangkatan"
+        android:layout_width="100px"
+        android:layout_height="100px"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginVertical="33dp"
+        android:src="@drawable/color_calendar"
+        app:layout_constraintEnd_toStartOf="@id/tanggal_keberangkatan"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/image_pelabuhan_2" />
 
     <EditText
         android:id="@+id/tanggal_keberangkatan"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="20dp"
         android:background="@drawable/custom_input"
-        android:drawableStart="@drawable/custom_date_input"
-        android:drawablePadding="10dp"
         android:ems="10"
         android:hint="@string/tanggal_keberangkatan"
         android:inputType="date"
-        android:paddingStart="10dp"
+        android:paddingStart="20dp"
         android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/image_tanggal_keberangkatan"
         app:layout_constraintTop_toBottomOf="@id/pelabuhan_tujuan" />
 
 
@@ -98,20 +130,31 @@
             android:layout_marginVertical="20dp"
             app:layout_constraintTop_toBottomOf="@id/tanggal_keberangkatan"/>-->
 
+    <ImageView
+        android:id="@+id/image_vehicle"
+        android:layout_width="100px"
+        android:layout_height="100px"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginVertical="30dp"
+        android:src="@drawable/color_vehicle"
+        app:layout_constraintEnd_toStartOf="@id/tipe_jasa"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/image_tanggal_keberangkatan" />
+
     <Spinner
         android:id="@+id/tipe_jasa"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="20dp"
         android:background="@drawable/custom_input"
-        android:drawableStart="@drawable/custom_service_type_input"
-        android:drawablePadding="10dp"
         android:ems="10"
         android:hint="@string/tipe_jasa"
         android:inputType="textNoSuggestions"
-        android:paddingStart="10dp"
+        android:paddingStart="20dp"
         android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/image_vehicle"
         app:layout_constraintTop_toBottomOf="@id/tanggal_keberangkatan" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -122,55 +165,60 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tipe_jasa">
 
-        <EditText
-            android:id="@+id/golongan"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="20dp"
-            android:background="@drawable/custom_input"
-            android:drawableStart="@drawable/custom_car_input"
-            android:drawablePadding="10dp"
-            android:ems="10"
-            android:hint="@string/golongan_kendaraan"
-            android:inputType="textNoSuggestions"
-            android:paddingStart="10dp"
-            android:textSize="14sp"
-            app:layout_constraintTop_toBottomOf="@id/tipe_jasa" />
+
+        <ImageView
+            android:id="@+id/image_police_number"
+            android:layout_width="100px"
+            android:layout_height="100px"
+            android:layout_marginHorizontal="25dp"
+            android:layout_marginVertical="10dp"
+            android:src="@drawable/color_police_number"
+            app:layout_constraintEnd_toStartOf="@id/nomor_kendaraan"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/nomor_kendaraan"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="20dp"
             android:background="@drawable/custom_input"
-            android:drawableStart="@drawable/custom_plate_number_input"
-            android:drawablePadding="10dp"
             android:ems="10"
             android:hint="@string/nomor_polisi"
             android:inputType="textNoSuggestions"
-            android:paddingStart="10dp"
+            android:paddingStart="20dp"
             android:textSize="14sp"
-            app:layout_constraintTop_toBottomOf="@id/golongan" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/image_police_number"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <ImageView
+        android:id="@+id/image_penumpang"
+        android:layout_width="100px"
+        android:layout_height="100px"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginVertical="27dp"
+        android:src="@drawable/color_total_person"
+        app:layout_constraintEnd_toStartOf="@id/penumpang"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/expandableGolongan" />
 
     <EditText
         android:id="@+id/penumpang"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="20dp"
         android:background="@drawable/custom_input"
-        android:drawableStart="@drawable/custom_passenger_input"
-        android:drawablePadding="10dp"
         android:ems="10"
         android:hint="@string/jumlah_penumpang"
         android:inputType="numberSigned"
-        android:paddingStart="10dp"
+        android:paddingStart="20dp"
         android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/image_penumpang"
         app:layout_constraintTop_toBottomOf="@id/expandableGolongan" />
 
     <Button
