--- a/app/src/main/res/layout/home_fragment_without_shimmer.xml
+++ b/app/src/main/res/layout/home_fragment_without_shimmer.xml
@@ -64,6 +64,16 @@
                     app:layout_constraintTop_toBottomOf="@id/nameFragmentHome"
                     tools:ignore="HardcodedText" />
 
+                <ImageView
+                    android:id="@+id/notification_button"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/ic_notification_color"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_margin="20dp"/>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <ImageView
