--- a/app/src/main/res/layout/row_penumpang.xml
+++ b/app/src/main/res/layout/row_penumpang.xml
@@ -78,13 +78,40 @@
                     style="@style/PembelianTextSecondary"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
                     android:layout_marginTop="5dp"
                     android:text="@string/nomor_telepon"
                     android:textSize="12sp"
-                    android:layout_marginHorizontal="10dp"
                     android:textStyle="normal"
                     app:layout_constraintStart_toEndOf="@id/ktp_text"
                     app:layout_constraintTop_toBottomOf="@id/nama_penumpang" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/required"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                app:layout_constraintStart_toEndOf="@id/identitas_penumpang"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
+
+                <TextView
+                    android:id="@+id/required_star"
+                    style="@style/PembelianTextSecondary"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/required_star"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    android:textColor="@android:color/holo_red_dark"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
