--- a/app/src/main/res/layout/fragment_ticket_speedboat.xml
+++ b/app/src/main/res/layout/fragment_ticket_speedboat.xml
@@ -88,6 +88,33 @@
         app:layout_constraintTop_toBottomOf="@id/pelabuhan_tujuan_s" />
 
     <ImageView
+        android:id="@+id/image_vehicle"
+        android:layout_width="100px"
+        android:layout_height="100px"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginVertical="30dp"
+        android:src="@drawable/color_vehicle"
+        app:layout_constraintEnd_toStartOf="@id/tipe_jasa_s"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/image_tanggal_keberangkatan" />
+
+    <Spinner
+        android:id="@+id/tipe_jasa_s"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="20dp"
+        android:background="@drawable/custom_input"
+        android:ems="10"
+        android:hint="@string/tipe_jasa"
+        android:inputType="textNoSuggestions"
+        android:paddingStart="20dp"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/image_vehicle"
+        app:layout_constraintTop_toBottomOf="@id/tanggal_keberangkatan_s" />
+
+    <ImageView
         android:id="@+id/image_penumpang"
         android:layout_width="100px"
         android:layout_height="100px"
@@ -96,7 +123,7 @@
         android:src="@drawable/color_total_person"
         app:layout_constraintEnd_toStartOf="@id/penumpang_s"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image_tanggal_keberangkatan" />
+        app:layout_constraintTop_toBottomOf="@id/image_vehicle" />
 
     <EditText
         android:id="@+id/penumpang_s"
@@ -112,7 +139,7 @@
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/image_penumpang"
-        app:layout_constraintTop_toBottomOf="@id/tanggal_keberangkatan_s" />
+        app:layout_constraintTop_toBottomOf="@id/tipe_jasa_s" />
 
     <Button
         android:id="@+id/btn_cari_s"
