--- a/app/src/main/res/layout/activity_detail_transaksi.xml
+++ b/app/src/main/res/layout/activity_detail_transaksi.xml
@@ -275,7 +275,7 @@
                         android:textStyle="normal"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@id/telepon_text"
-                        app:layout_constraintTop_toBottomOf="@id/email_pemesan" />
+                        app:layout_constraintTop_toBottomOf="@id/email_pemesan_transaksi" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -363,14 +363,15 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/card_view_metode_pembayaran_transaksi"
                 app:layout_constraintStart_toStartOf="parent">
+
                 <Button
                     android:id="@+id/upload_bukti_pembayaran"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginHorizontal="40dp"
                     android:layout_marginVertical="20dp"
-                    android:text="@string/upload_transaksi"
                     android:backgroundTint="@color/orange_dark"
+                    android:text="@string/lihat_pembayaran"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
