--- a/app/src/main/res/layout/activity_pesanan_sukses.xml
+++ b/app/src/main/res/layout/activity_pesanan_sukses.xml
@@ -8,9 +8,9 @@
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/gifImageView"
-        android:layout_width="206dp"
-        android:layout_height="238dp"
-        android:layout_marginBottom="175dp"
+        android:layout_width="186dp"
+        android:layout_height="180dp"
+        android:layout_marginBottom="330dp"
         android:src="@drawable/check_mark_gif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,6 +29,78 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gifImageView" />
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint_bank"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/pemesanan_sukses"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:id="@+id/nama_bank"
+            android:layout_width="150dp"
+            android:layout_height="70dp"
+            android:text="BCA"
+            android:textSize="50sp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="@android:color/black"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/nama_bank"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <TextView
+                android:id="@+id/van_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Virtual Account Number"
+                android:textColor="@color/black"
+                android:textSize="19sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/van"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="XXXXXXXX"
+                android:textSize="17sp"
+                app:layout_constraintTop_toBottomOf="@id/van_text"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <TextView
+                android:id="@+id/batas_waktu_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Batas Waktu Pembayaran"
+                android:textColor="@color/black"
+                android:textSize="19sp"
+                app:layout_constraintTop_toBottomOf="@id/van"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/batas_waktu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2022-01-01"
+                android:textSize="17sp"
+                app:layout_constraintTop_toBottomOf="@id/batas_waktu_text"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <TextView
         android:id="@+id/pemesanan_sukses_text"
         android:layout_width="300dp"
@@ -40,7 +112,7 @@
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pemesanan_sukses" />
+        app:layout_constraintTop_toBottomOf="@+id/constraint_bank" />
 
     <Button
         android:id="@+id/lanjutkan"
@@ -49,7 +121,7 @@
         android:text="@string/lanjutkan"
         android:background="@android:color/transparent"
         android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@id/pemesanan_sukses_text"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="40dp"/>
 
