--- a/app/src/main/res/layout/row_notification.xml
+++ b/app/src/main/res/layout/row_notification.xml
@@ -35,9 +35,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="13dp"
+                android:paddingEnd="10dp"
                 android:text="@string/notification_title"
                 android:textSize="19sp"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/notification_more"
                 app:layout_constraintStart_toEndOf="@id/notification_icon"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,9 +49,10 @@
                 android:layout_height="50dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="5dp"
+                android:paddingEnd="10dp"
                 android:text="@string/notification_text"
                 android:textSize="13sp"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/notification_more"
                 app:layout_constraintStart_toEndOf="@id/notification_icon"
                 app:layout_constraintTop_toBottomOf="@id/notification_title" />
 
