--- a/app/src/main/res/layout/berita_kapal_recycler.xml
+++ b/app/src/main/res/layout/berita_kapal_recycler.xml
@@ -3,11 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    >
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/berita_card_view"
         android:layout_width="200dp"
         android:layout_height="175dp"
         app:cardCornerRadius="5dp"
