--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -1,74 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragment.ReviewFragment"
-    android:paddingBottom="30dp">
+    android:paddingBottom="30dp"
+    tools:context=".Fragment.ReviewFragment">
 
     <TextView
         android:id="@+id/text_review"
+        style="@style/PembelianTextPrimary"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        style="@style/PembelianTextPrimary"
+        android:layout_margin="20dp"
         android:text="@string/review"
         android:textSize="30sp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_margin="20dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:paddingStart="10dp"
         android:id="@+id/isi_review"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        app:layout_constraintTop_toBottomOf="@id/text_review"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="20dp"
         android:background="@drawable/custom_input"
-        android:gravity="top|left"/>
+        android:gravity="top|left"
+        android:paddingStart="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_review" />
 
     <TextView
         android:id="@+id/text_rating"
+        style="@style/PembelianTextSecondary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/PembelianTextSecondary"
-        app:layout_constraintTop_toBottomOf="@id/isi_review"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="30dp"
         android:text="Penilaian"
-        android:textSize="20dp"/>
+        android:textSize="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/isi_review" />
 
     <RatingBar
         android:id="@+id/rating_bar"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        app:layout_constraintStart_toEndOf="@id/text_rating"
-        app:layout_constraintTop_toBottomOf="@id/isi_review"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginVertical="20dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginVertical="20dp"
+        android:isIndicator="false"
         android:numStars="5"
+        android:progressBackgroundTint="@color/light_blue"
+        android:progressTint="@color/red"
         android:rating="0"
         android:stepSize="1"
-        android:progressTint="@color/red"
-        android:progressBackgroundTint="@color/light_blue"
-        android:isIndicator="false"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/text_rating"
+        app:layout_constraintTop_toBottomOf="@id/isi_review" />
 
     <Button
         android:id="@+id/hapus_review"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/rating_bar"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="20dp"
         android:layout_marginVertical="40dp"
+        android:layout_marginStart="20dp"
         android:backgroundTint="@android:color/holo_red_dark"
+        android:text="@string/hapus_review"
         android:textColor="@color/white"
-        android:text="@string/hapus_review"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rating_bar" />
 
     <Button
         android:id="@+id/up_review"
