--- a/app/src/main/res/layout/home_fragment_without_shimmer.xml
+++ b/app/src/main/res/layout/home_fragment_without_shimmer.xml
@@ -68,11 +68,11 @@
                     android:id="@+id/notification_button"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:layout_margin="20dp"
                     android:src="@drawable/ic_notification_color"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_margin="20dp"/>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -101,8 +101,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    app:layout_constraintTop_toBottomOf="@id/text_berita"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/text_berita" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -124,8 +124,9 @@
                     android:id="@+id/berita_kapal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@id/text_berita_kapal"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    android:layout_margin="10dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/text_berita_kapal" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
 
