--- a/app/src/main/res/layout/row_penumpang.xml
+++ b/app/src/main/res/layout/row_penumpang.xml
@@ -3,7 +3,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="74dp">
+    android:layout_height="80dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_id"
@@ -11,13 +11,15 @@
         android:layout_height="70dp"
         android:layout_margin="3dp"
         app:cardCornerRadius="6dp"
+        app:cardElevation="3dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraint_penumpang"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraint_nomor_penumpang"
